Added SQL scripts, configuration files. Added navigational buttons throughout pages.