@@ -6,17 +6,21 @@ import com.kwgdev.spring5recipeapp.services.RecipeService;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.servlet.ModelAndView;
 
+import javax.validation.Valid;
+
 /**
  * created by kw on 8/14/2020 @ 3:32 AM
  */
-@Controller
 @Slf4j
+@Controller
 public class RecipeController {
 
+    private static final String RECIPE_RECIPEFORM_URL = "recipe/recipeform";
     private final RecipeService recipeService;
 
     public RecipeController(RecipeService recipeService) {
@@ -26,7 +30,8 @@ public class RecipeController {
     @GetMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
+        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+
         return "recipe/show";
     }
 
@@ -40,12 +45,22 @@ public class RecipeController {
     @GetMapping("recipe/{id}/update")
     public String updateRecipe(@PathVariable String id, Model model){
         model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
-        return  "recipe/recipeform";
+        return RECIPE_RECIPEFORM_URL;
     }
 
-    //@RequestMapping(name = "recipe", method = RequestMethod.POST) --> old way
     @PostMapping("recipe")
-    public String saveOrUpdate(@ModelAttribute RecipeCommand command){
+    public String saveOrUpdate(@Valid @ModelAttribute("recipe") RecipeCommand command, BindingResult bindingResult){
+
+        // these errors are read and displayed by Thymeleaf on recipe/recipeform.html
+        if(bindingResult.hasErrors()){
+
+            bindingResult.getAllErrors().forEach(objectError -> {
+                log.debug(objectError.toString());
+            });
+
+            return RECIPE_RECIPEFORM_URL;
+        }
+
         RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
 
         return "redirect:/recipe/" + savedCommand.getId() + "/show";
@@ -54,8 +69,7 @@ public class RecipeController {
     @GetMapping("recipe/{id}/delete")
     public String deleteById(@PathVariable String id){
 
-
-        log.debug("Deleting Recipe id: " + id);
+        log.debug("Deleting id: " + id);
 
         recipeService.deleteById(Long.valueOf(id));
         return "redirect:/";
@@ -63,33 +77,18 @@ public class RecipeController {
 
     @ResponseStatus(HttpStatus.NOT_FOUND)
     @ExceptionHandler(NotFoundException.class)
-    public ModelAndView handleNotFound(Exception exception) {
+    public ModelAndView handleNotFound(Exception exception){
 
         log.error("Handling not found exception");
         log.error(exception.getMessage());
 
-        ModelAndView mav = new ModelAndView();
+        ModelAndView modelAndView = new ModelAndView();
 
-        mav.setViewName("404error");
-        mav.addObject("exception", exception);
+        modelAndView.setViewName("404error");
+        modelAndView.addObject("exception", exception);
 
-
-        return mav;
+        return modelAndView;
     }
 
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    @ExceptionHandler(NumberFormatException.class)
-    public ModelAndView handleNumberFormatExc (Exception exception) {
 
-        log.error("Handling Number Format Exception");
-        log.error(exception.getMessage());
-
-        ModelAndView mav = new ModelAndView();
-
-        mav.setViewName("400error");
-        mav.addObject("exception", exception);
-
-
-        return mav;
-    }
 }
